# Model-Informed-Path-Planning

./: .gitignore  README.md  colconbuild.sh  config.yaml  test_main.py
LaTeX-template/diplomski_rad/: diplomski_rad.fdb_latexmk  diplomski_rad.fls  diplomski_rad.tex  fer.cls  master_thesis.fdb_latexmk  master_thesis.fls
OSM_data_prosessing/: detect_coastline.py  generate_map.py  main.py  process_osm_data.py  set_start_goal.py
algorithm_test/: README.md  config.yaml  generate_map.py  plot_algorithms.py  plot_table.py  process_osm_data.py  pytest.py  test_algorithms.py  thread.py
algorithm_test/algorithms/: a_star.py  d_star_lite.py  dijkstra.py
algorithm_test/binary_dump/: a_star_path_x  a_star_path_y  bfs_path_x  bfs_path_y  bid_a_star_path_x  bid_a_star_path_y  bid_bfs_path_x  bid_bfs_path_y  d_star_lite_path_x  d_star_lite_path_y  d_star_path_x  d_star_path_y  dfs_path_x  dfs_path_y  dijkstra_path_x  dijkstra_path_y  gbfs_path_x  gx  gy  image_width_height_m  ox  oy  sx  sy
algorithms/: depth_first_search.py
assets/: model­informed­d_path_planning.pptx
binary_dump/: a_star_path_x  a_star_path_y  bfs_path_y  bid_a_star_path_y  bid_bfs_path_x  bid_bfs_path_y  coast_points  coordinates  d_star_lite_path_x  d_star_lite_path_y  d_star_path_x  d_star_path_y  dfs_path_x  dfs_path_y  dim_x  dimensions  gbfs__path_y  gbfs_path_x  gbfs_path_y  gx  gy  ox  oy  sx  sy  time_distance_astar  time_distance_bfs  time_distance_bidir_astar  time_distance_bidir_bfs  time_distance_dfs  time_distance_dijkstra  time_distance_dstar  time_distance_dstar_lite  time_distance_gbfs
grid_search_algorithms/Astar/: a_star.py  basic_pathfinder.py  cost_map_pathfinder.py  init_pygame.py  pathfinder_3.py
grid_search_algorithms/algorith_test/: a_star_path_x  bid_a_star_path_x  config.yaml  d_star_lite_path_y  dijkstra.py  generate_map.py  ox  plot_algorithms.py  test.py
grid_search_algorithms/algorith_test/algorithms/: breadth_first_search.py  greedy_best_first_search.py
grid_search_algorithms/algorith_test/binary_dump/: a_star_path_y  bfs_path_x  bfs_path_y  bid_a_star_path_y  bid_bfs_path_y  d_star_lite_path_x  d_star_path_y  dijkstra_path_x  dijkstra_path_y  oy
image_processing/: image_processing.py
input_data/klimno/: osm_info.txt
input_data/most/: osm_info.txt
input_data/omisalj/: osm_info.txt
input_data/toulon/: osm_info.txt
input_data/voz/: osm_info.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/path_planning_marus/share/path_planning_marus/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
osm_data_processing/: __init__.py  config.yaml  detect_coast.py  detect_coastline.py  generate_coastmap.py  get_yaml_data.py  main.py  map_process.py  post_processing.py  process_osm_data.py  set_start_goal.py  set_waypoints.py  test_path_object.py  test_paths_visualization.py  test_results_visualization.py
osm_data_prosessing/: detect_coastline.py  generate_coastmap.py  main.py  process_osm_data.py  set_start_goal.py
path_optimization/: test.py
path_optimization/algorithms/: d_star_lite_advanced.py
path_planning/: advanced_dump.py  algorithms_base.py  algorithms_test.py  config_test.yaml  main.py
path_planning/algorithms/: hybrid_d_star_lite.py  hybrid_dstar.py
path_planning/curve_generation/: dubins_curve.py
path_planning_ws/: colcon.sh
path_planning_ws/install/: local_setup.sh  setup.sh
path_planning_ws/log/: latest_build
path_planning_ws/src/: launch_map.sh
path_planning_ws/src/map_maker/: setup.py
path_planning_ws/src/map_maker/launch/: make_map_launch.py  map_visualization_launch.py  publish_map_launch_2.py
path_planning_ws/src/map_maker/map_data/: processed_map_jadranovo  processed_map_klimno  processed_map_omisalj  processed_map_proba
path_planning_ws/src/map_maker/map_maker/: detect_coast.py  map_process.py  map_publisher.py  map_visualization.py  post_processing.py
path_planning_ws/src/map_server/: package.xml  setup.py
path_planning_ws/src/path_management/: CMakeLists.txt
path_planning_ws/src/path_planning_action/: setup.cfg  setup.py
path_planning_ws/src/path_planning_action/launch/: pointcloud_launch.py  rviz2_pointcloud_launch.py  update_start_goal_launch.py
path_planning_ws/src/path_planning_action/rviz2/: map_visualization.rviz
path_planning_ws/src/path_planning_client/: package.xml  setup.cfg  setup.py
path_planning_ws/src/path_planning_client/launch/: rviz2_pointcloud_launch.py  start_goal_client_launch.py  update_start_goal_launch.py
path_planning_ws/src/path_planning_client/path_planning_client/: cpp_plot.py  local_coordinates_converter.py  pointcloud_publisher.py  rviz2_launch.py  start_goal_client.py  start_goal_publisher.py  start_goal_update.py
path_planning_ws/src/path_planning_client/rviz2/: map_visualization.rviz
path_planning_ws/src/path_planning_dtstarlite/: CMakeLists.txt  package.xml
path_planning_ws/src/path_planning_server/: package.xml  setup.py
path_planning_ws/src/path_planning_server_cpp/: CMakeLists.txt  package.xml
path_planning_ws/src/path_planning_server_cpp/launch/: path_planning_launch.xml
path_planning_ws/src/path_planning_server_cpp/src/: NodeX.hpp  path_planning_server.cpp
path_planning_ws/src/user_action_interfaces/: CMakeLists.txt  package.xml
requirements/: requirements.txt
ros2_marus_ws/src/marus_path_planning/: CMakeLists.txt  package.xml
ros2_ws/src/path_planning_marus/: setup.cfg
src/grid_search_algorithms/Astar/: pathfinder_4.py
src/path_planning_marus/: setup.py
test_algorithm/: algorithm_class.py  algorithms_base.py  algorithms_test.py  load_data.py  main.py  path_results.py  plot.py  ryg_parametrization.py  speed_distance_calculations.py  test.py  test_dstar_lite.py  test_path_planning.py
test_algorithm/algorithms/: bidirectional_a_star.py  bidirectional_breadth_first_search.py  d_star_lite.py  d_star_lite_advanced.py
test_algorithms/: algorithms_base.py  algorithms_test.py  config_test.yaml  main.py  path_results.py
test_algorithms/algorithms/: d_star_lite.py  dstar.py
(+206 files in other folders)
