<?xml version="1.0"?>
<package format="3">
  <name>path_planning_server_cpp</name>
  <version>0.0.0</version>
  <description>Path Planning Server in C++</description>
  <maintainer email="krizman.enio@outlook.com">enio</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>user_action_interfaces</build_depend>
  <build_depend>Eigen3</build_depend>

  <!-- Add Gnuplot as a build dependency -->
  <build_depend>gnuplot</build_depend>

  <!-- Export dependencies for runtime -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_action</build_export_depend>
  <build_export_depend>rclcpp_components</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>user_action_interfaces</build_export_depend>
  <build_export_depend>Eigen3</build_export_depend>

  <!-- Add Gnuplot as an exec dependency -->
  <exec_depend>gnuplot</exec_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>
